# Software-Testing-Quality-Assurance-and-Maintenance

./: README.md
a1/a1q3/: coverage_tests.py
a1/wlang/: stats_visitor.py  test_int.py  test_stats_visitor.py  test_undef_visitor.py  undef_visitor.py
a2/: .coverage
a2/a2q3/: magic_square.py  puzzle_tests.py
a2/wlang/: ast.py  int.py  parser.py  semantics.py  stats_visitor.py  stmt_counter.py  sym.py  test.py  test1.prg  test_int.py  test_stats_visitor.py  test_sym.py  test_undef_visitor.py  test_util.py  undef_visitor.py  util.py  while.ebnf  while.lean.ebnf
a3/: .coverage  user.yml
a3/dafny/: CalcTerm.dfy
a3/dafny/pancakesort/: PancakeSort.dfy  findmax.dfy  flip.dfy
a3/dafny/quicksort/: QuickSort.dfy  part.dfy
a3/wlang/: sym.py  test_int.py  test_parser.py  test_stats_visitor.py  test_sym.py  test_undef_visitor.py
fuzz-battle/report/: default.profdata  report.md  src_report.info
fuzz-battle/src/: CMakeLists.txt  fuzz_target.c  fuzz_target1.c  fuzz_target3.c  fuzz_target4.c
